update userservice module creatuser and test createuser